# Store

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  database.db  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vercel.config  vite.config.ts
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: 2-0ac3e05c.js
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/chunks/: internal.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: app.html  tauri.conf.json
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/resources/: database.db
src-tauri/src/: db.rs  game_list.rs  lib.rs  main.rs  models.rs  queue.rs  schema.rs  use_store.rs
src-tauri/src/api/: mod.rs
src-tauri/src/db/: games.rs  mod.rs
src/components/: WindowMenu.svelte
src/components/Application/: WindowMenu.svelte
src/components/Modal/: install.svelte
src/components/Pages/: Game.svelte  Home.svelte  Queue.svelte
src/lib/types/: Game.ts  Steam.ts
src/renderer/: App.tsx
src/routes/: +layout.svelte  +page.svelte  styles.css
