[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "app"
rust-version = "1.70"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
window-vibrancy = "0.3.2"
tauri-plugin-window-state = "2.0.0-alpha"
window-shadows = "^0.2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.20.0", features = ["full"] }
tauri-plugin-store = "2.0.0-alpha"
log = "0.4.20"
tauri-cli = "2.0.0-alpha.17"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0-alpha"

[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", branch = "v0.16" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
